scss/custom/objects/_typography.scss
/*------------------------------------*\
    $TYPOGRAPHY
\*------------------------------------*/
p { hyphens: auto;}

i { font-style: normal;}

blockquote {
	font-style: italic;
	@include px-and-rem(margin, 1.5);
	@include px-and-rem(padding, .25 1.5);
	border-left: 1px solid $base-ui-color;
}

kbd {
	font-size: 85%;
	padding: .25em .5em;
	border: 1px solid $clr-ntrl-10;
	border-radius: 2px;
	vertical-align: middle;
}






/*------------------------------------*\
    $HEADERS
\*------------------------------------*/
h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  line-height: 1;
}





/*------------------------------------*\
		$ICONS
\*------------------------------------*/
/*
 * Enable icons in vars.scss with $use-icons: true;
 *
 * Use the Unicode Private Use Area (PUA) to ensure screen readers do not
 * read off random characters that represent icons
 */

/* WEB APPLICATION ICONS U+e0xxx */
$app-icons: (
	menu:     "\e000",
	grid:     "\e010",
	expand:   "\e020",
	close:    "\e030"
);

@each $icon-name, $icon-uni in $app-icons {
	.icon-#{$icon-name}:before {
		content: "#{$icon-uni}";
	}
}





/* DIRECTIONAL ICONS U+e2xxx */





/* SOCIAL ICONS U+e3xxx */





/*------------------------------------*\
    $MODIFIERS
\*------------------------------------*/
/**
 * font color modifiers
 */
.error { color: $clr-danger;}

%fc_-primary {
	color: $clr-primary;
}


/**
 * font-family modifiers
 */
%ff_-header {
	font-family: $font-header-stack !optional;
}


/**
 * alignment modifiers
 */
%text_-left   { text-align: left;}
%text_-center { text-align: center;}
%text_-right  { text-align: right;}

// TinyMCE classes
.align_left    { @extend %text_-left;}
.align_center  { @extend %text_-center;}
.align_right   { @extend %text_-right;}

img.align-left {
	float:left;
	@include px-and-rem(margin-right, 1);
	@include px-and-rem(margin-bottom, 1);
}

img.align-right {
	float:right;
	@include px-and-rem(margin-left, 1);
	@include px-and-rem(margin-bottom, 1);
}

img.align_center {
  display: block;
  margin: 0 auto;
}


/**
 * case modifiers
 */
%case_-upper   { text-transform: uppercase;}
%case_-lower   { text-transform: lowercase;}
%case_-normal  { text-transform: none;}
%case_-capital { text-transform: capitalize;}


/**
 * Font weights
 */
%weight_-normal { font-weight: normal;}
%weight_-bold   { font-weight: bold;}


/**
 * vertical alignment modifiers
 */
%valign_-top    { vertical-align: top;}
%valign_-middle { vertical-align: middle;}
%valign_-bottom { vertical-align: bottom;}


/**
 * Hide from both screenreaders and browsers: h5bp.com/u
 */
.hidden { display: none; visibility: hidden;}


/**
 * Hide content off-screen without resorting to `display:none;`, also provide
 * breakpoint specific hidden elements.
 */
.accessibility,
.visuallyhidden{
  @include accessibility;

  &.focusable:active, &.focusable:focus {
    position: static;
    clip: auto;
    width: auto;
    height: auto;
    margin: 0;
    overflow: visible;
 }

}
@if $responsive{
  @each $state in palm, lap, lap-and-up, portable, desk, desk-wide{
    @include media-query(#{$state}){
      .accessibility_-#{$state},
      .visuallyhidden_-#{$state}{
        @include accessibility;
     }
   }
 }
}//endif

